--- a/Learn/apis-and-microservices/apis-and-microservices-projects/project-urlshortener/package.json
+++ b/Learn/apis-and-microservices/apis-and-microservices-projects/project-urlshortener/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
+  "author": "John Azar",
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.4"
