--- a/Learn/apis-and-microservices/apis-and-microservices-projects/exercise-tracker/package.json
+++ b/Learn/apis-and-microservices/apis-and-microservices-projects/exercise-tracker/package.json
@@ -7,14 +7,15 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"dotenv": "^8.2.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.6.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongoose": "^5.12.7"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
 	},
-  "author": "John Azar",
+	"author": "John Azar",
 	"license": "MIT",
 	"keywords": [
 		"node",
