--- a/Learn/apis-and-microservices/apis-and-microservices-projects/exercise-tracker2021/package.json
+++ b/Learn/apis-and-microservices/apis-and-microservices-projects/exercise-tracker2021/package.json
@@ -7,16 +7,13 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"body-parser": "^1.19.0",
-		"cors": "^2.8.5",
-		"dotenv": "^8.6.0",
+		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"mongoose": "^5.12.7"
+		"cors": "^2.8.5"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
 	},
-	"author": "John Azar",
 	"license": "MIT",
 	"keywords": [
 		"node",
